tests/parser/fail/self-class-param-bin.som
"test:
fail-message:
  - contains: define
  - contains: self
"

SelfClassParamBin = (
  ----

  / self = ('rip')
)
